# slide-creator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  compose.dev.yaml  compose.yaml  e_commerce_sales_data.xlsx  gemini-code-1781715697603.txt  opencode.json  session-ses_0fe2.md  test_generation_flow.py
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  errors.py  main.py
backend/app/middleware/: error_handler.py  rate_limit.py
backend/app/models/: schemas.py
backend/app/prompts/: generation.py  refine.py  (+3 more)
backend/migrations/: env.py
backend/scripts/: cleanup_orphan_deck_files.py  migrate_sqlite_decks.py
backend/tests/: conftest.py  test_api.py  test_audit.py  test_charts.py  test_cleanup.py  test_cleanup_orphan_deck_files.py  test_config.py  test_database.py  test_deck_files.py  test_deck_normalizer.py  test_deck_repository.py  test_deck_store.py  test_deck_versions.py  test_deck_versions_api.py  test_decks_api.py  test_decks_schemas.py  test_dependencies.py  test_deployment_config.py  test_dlp.py  test_errors.py  test_export_deck_id.py  test_gcs_storage.py  test_gemini.py  test_gemini_api.py  test_gemini_api_httpx.py  test_generate_persistence.py  test_health.py  test_image_prompts.py  test_image_service.py  test_lifespan.py  test_migrate_sqlite_decks.py  test_migrations.py  test_onlyoffice_api.py  test_onlyoffice_callback.py  test_onlyoffice_service.py  test_onlyoffice_smoke.py  test_postgres_deck_repository.py  test_pptx_canvas.py  test_pptx_engine.py  test_pptx_preview.py  (+8 more)
(+137 files in other folders)
