[project]
name = "backend"
version = "0.1.0"
description = "SlideForge API – AI Presentation Generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "google-cloud-aiplatform>=1,<2",
    "google-cloud-dlp>=3,<4",
    "google-cloud-storage>=2,<3",
    "openpyxl>=3.1.5",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "python-multipart>=0.0.32",
    "python-pptx>=1,<2",
    "slowapi>=0.1.10",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.34,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.17",
]
